Fix small gap between border and text area on create poll page

--- a/static/PollApp/main.css
+++ b/static/PollApp/main.css
@@ -25,14 +25,13 @@ textarea {
 	resize: none;
 	border: none;
 	outline: none;
-	height: 78px;
 	overflow: auto;
+	height: 78px;
 }
 
 textarea:focus, input[type=text]:focus {
 	background: #F7F7F7;
 }
-
 
 input::-webkit-input-placeholder
 {
@@ -183,4 +182,8 @@ input:focus {
 
 .actions {
 	margin: 20px 0 20px 0;
+}
+
+.question-textarea {
+	vertical-align: bottom;
 }
